--- a/cart.html
+++ b/cart.html
@@ -2,27 +2,13 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Basic SEO Meta Tags -->
-  <title>My cart - Ermunai Organic Farm Foods | 100% Organic & Ready-to-Cook Products in India</title>
-  <meta name="description"
-    content="Buy 100% organic, natural, and chemical-free farm foods from Ermunai Organic Farm Foods. Explore our range of ready-to-cook and ready-to-eat organic products, delivered fresh across India.">
-  <meta name="keywords"
-    content="organic food India, Ermunai Organic, organic farm foods, ready to cook, organic groceries, natural farm produce">
-  <meta name="author" content="Ermunai Organic Farm Foods">
-  <meta name="robots" content="index, follow">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="canonical" href="https://ermunaiorganicfarmfoods.com/">
-  <meta property="og:title" content="Ermunai Organic Farm Foods | 100% Organic & Ready-to-Cook Products">
-  <meta property="og:description"
-    content="Ermunai Organic Farm Foods brings you healthy, natural, and organic products directly from farm to table.">
-  <meta property="og:url" content="https://ermunaiorganicfarmfoods.com/">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="https://ermunaiorganicfarmfoods.com/images/logo.png">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>My Cart – Ermunai Organic Farm Foods</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
   <style>
     * {
       margin: 0;
@@ -43,27 +29,40 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      flex-wrap: wrap;
     }
 
     header h2 {
-      font-size: 20px;
+      font-size: 22px;
       color: #244021;
+      font-weight: 700;
     }
+
+    header a {
+      color: green;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    /* ---------------------------------- Layout ---------------------------------- */
 
     .cart-container {
       display: flex;
       gap: 30px;
       padding: 30px 40px;
       align-items: flex-start;
+      flex-wrap: wrap;
     }
 
-    /* Cart Items */
     .cart-items {
       flex: 2;
       background: #fff;
       border-radius: 12px;
       padding: 20px;
+      min-width: 300px;
     }
+
+    /* ---------------------------------- Cart Item ---------------------------------- */
 
     .cart-item {
       display: flex;
@@ -71,6 +70,7 @@
       justify-content: space-between;
       border-bottom: 1px solid #eee;
       padding: 15px 0;
+      gap: 15px;
     }
 
     .cart-item:last-child {
@@ -82,7 +82,6 @@
       height: 100px;
       object-fit: cover;
       border-radius: 10px;
-      margin-right: 15px;
     }
 
     .item-details {
@@ -103,6 +102,7 @@
       font-size: 16px;
       color: #222;
       margin-bottom: 4px;
+      font-weight: bold;
     }
 
     .item-details p {
@@ -110,10 +110,19 @@
       color: #555;
     }
 
+    /* Quantity section */
+
+    .quantity-line {
+      margin: 6px 0 4px;
+      font-size: 14px;
+      font-weight: 600;
+      color: #444;
+    }
+
     .quantity-control {
       display: flex;
       align-items: center;
-      margin-top: 10px;
+      margin-top: 5px;
       gap: 10px;
     }
 
@@ -124,13 +133,13 @@
       border-radius: 6px;
       background: #f9f9f9;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 18px;
+      font-weight: bold;
+      transition: 0.2s;
     }
 
-    .quantity-control span {
-      min-width: 20px;
-      text-align: center;
-      font-weight: bold;
+    .quantity-control button:hover {
+      background: #eaeaea;
     }
 
     .item-price {
@@ -144,23 +153,32 @@
     }
 
     .item-price h4 {
-      font-size: 16px;
+      font-size: 18px;
       color: #2f6f31;
+      font-weight: bold;
     }
 
     .remove-btn {
       cursor: pointer;
       color: #777;
-      font-size: 16px;
+      font-size: 18px;
       margin-left: 10px;
+      transition: 0.2s;
     }
 
-    /* Order Summary */
+    .remove-btn:hover {
+      color: crimson;
+    }
+
+    /* ---------------------------------- Order Summary ---------------------------------- */
+
     .order-summary {
       flex: 1;
       background: #fff;
       padding: 20px;
       border-radius: 12px;
+      min-width: 260px;
+      max-width: 360px;
     }
 
     .order-summary h3 {
@@ -168,18 +186,19 @@
       margin-bottom: 15px;
       border-bottom: 1px solid #eee;
       padding-bottom: 10px;
+      font-weight: bold;
     }
 
     .summary-item {
       display: flex;
       justify-content: space-between;
       margin: 8px 0;
-      font-size: 14px;
+      font-size: 15px;
     }
 
     .summary-item.total {
       font-weight: bold;
-      font-size: 16px;
+      font-size: 18px;
       color: #2f6f31;
       border-top: 1px solid #eee;
       padding-top: 10px;
@@ -196,10 +215,29 @@
       font-weight: 600;
       margin-top: 20px;
       cursor: pointer;
+      transition: 0.2s;
     }
 
     .checkout-btn:hover {
       background: #244021;
+    }
+
+    /* ---------------------------------- Responsive ---------------------------------- */
+    @media (max-width: 900px) {
+      .cart-container {
+        padding: 20px;
+      }
+    }
+
+    @media (max-width: 700px) {
+      .cart-item {
+        flex-direction: column;
+        text-align: left;
+      }
+
+      .item-price {
+        text-align: left;
+      }
     }
   </style>
 </head>
@@ -217,10 +255,15 @@
     <!-- Order Summary -->
     <div class="order-summary" id="orderSummary">
       <h3>Order Summary</h3>
+
       <div class="summary-item"><span>Subtotal</span> <span id="subtotal">₹0</span></div>
       <div class="summary-item"><span>Tax (5%)</span> <span id="tax">₹0</span></div>
-      <div class="summary-item"><span>Shipping</span> <span id="shipping">Free</span></div>
+
+      <!-- SHIPPING WILL BE CALCULATED IN checkout.html -->
+      <div class="summary-item"><span>Shipping</span> <span id="shipping">Calculated on next page</span></div>
+
       <div class="summary-item total"><span>Total</span> <span id="total">₹0</span></div>
+
       <button class="checkout-btn" id="checkout-btn">Proceed to Checkout</button>
     </div>
   </div>
@@ -238,24 +281,34 @@
       let subtotal = 0;
 
       cart.forEach((item, index) => {
-        subtotal += item.price * (item.qty || 1);
+        const qty = item.qty || 1;
+        const itemTotal = item.price * qty;
+        subtotal += itemTotal;
 
         cartItems.innerHTML += `
           <div class="cart-item">
-            <img src="${item.image}" alt="${item.name}">
+            <img src="${item.image}" alt="${item.name}"/>
+
             <div class="item-details">
               <span class="category-tag">${item.category || "Product"}</span>
+
               <h3>${item.name}</h3>
               <p>${item.description || ""}</p>
+
+              <div class="quantity-line">
+                Quantity Selected: <strong>${item.quantityValue}${item.quantityType}</strong>
+              </div>
+
               <div class="quantity-control">
                 <button onclick="updateQty(${index}, -1)">-</button>
-                <span>${item.qty || 1}</span>
+                <span>${qty}</span>
                 <button onclick="updateQty(${index}, 1)">+</button>
               </div>
             </div>
+
             <div class="item-price">
               <p>₹${item.price} each</p>
-              <h4>₹${item.price * (item.qty || 1)}</h4>
+              <h4>₹${itemTotal}</h4>
               <i class="fa fa-trash remove-btn" onclick="removeItem(${index})"></i>
             </div>
           </div>
@@ -263,7 +316,6 @@
       });
 
       let tax = subtotal * 0.05;
-      let shipping = subtotal > 0 ? "Free" : "₹0";
       let total = subtotal + tax;
 
       subtotalEl.textContent = "₹" + subtotal;
@@ -285,12 +337,11 @@
     }
 
     document.getElementById("checkout-btn").addEventListener("click", () => {
-      // optional: check if cart is non-empty
       if (cart.length === 0) {
         alert("Your cart is empty!");
         return;
       }
-      // redirect to checkout.html
+      // Proceed to Shipping Calculation Page
       window.location.href = "checkout.html";
     });
 
