--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
           <div class="card-content">
             <h3>Ready to Serve</h3>
             <p>Ready-to-use mixes for soups, snacks, and more.</p>
-            <a href="shop.html?category=instant" class="explore-link">Explore Category →</a>
+            <a href="shop.html?category=readytoserve" class="explore-link">Explore Category →</a>
           </div>
         </div>
 
@@ -1013,7 +1013,7 @@
           <li><a href="shop.html?category=readyToCookMixes">Ready-to-cook Instant Mixes</a></li>
           <li><a href="shop.html?category=instantSoup">Instant Soup Mix</a></li>
           <li><a href="shop.html?category=idliPodi">Idli Podi's</a></li>
-          <li><a href="shop.html?category=instant">Instant Products</a></li>
+          <li><a href="shop.html?category=readytoserve">Ready to Serve</a></li>
           <li><a href="shop.html?category=herbal">Herbal Products</a></li>
         </ul>
       </div>
