--- a/purchase.html
+++ b/purchase.html
@@ -527,7 +527,7 @@
           <li><a href="shop.html?category=readyToCookMixes">Ready-to-cook Instant Mixes</a></li>
           <li><a href="shop.html?category=instantSoup">Instant Soup Mix</a></li>
           <li><a href="shop.html?category=idliPodi">Idli Podi’s</a></li>
-          <li><a href="shop.html?category=instant">Instant Products</a></li>
+          <li><a href="shop.html?category=readytoserve">Ready to Serve</a></li>
           <li><a href="shop.html?category=herbal">Herbal Products</a></li>
         </ul>
       </div>
