--- a/shop.html
+++ b/shop.html
@@ -918,6 +918,19 @@
   </footer>
 
 <script type="module">
+
+  //responsive header
+    const hamburger = document.querySelector(".hamburger");
+    const nav = document.querySelector("header nav");
+    const closeMenu = document.querySelector(".close-menu");
+
+    hamburger.addEventListener("click", () => {
+      nav.classList.add("active");
+    });
+
+    closeMenu.addEventListener("click", () => {
+      nav.classList.remove("active");
+    });
   /* ---------------------------------------------------
      ✅ FIREBASE IMPORTS (same as before)
   --------------------------------------------------- */
