--- a/checkout.html
+++ b/checkout.html
@@ -11,6 +11,8 @@
         content="organic food India, Ermunai Organic, organic farm foods, ready to cook, organic groceries, natural farm produce">
     <meta name="author" content="Ermunai Organic Farm Foods">
     <meta name="robots" content="index, follow">
+    <!-- simplest: 32x32 PNG -->
+    <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
     <style>
