--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy - Ermunai Organic Farm Foods</title>
-  <meta name="description" content="Read Ermunai Organic Farm Foods' Privacy Policy to understand how we collect, use, and protect your personal data while you shop with us online." />
+  <!-- simplest: 32x32 PNG -->
+  <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
+  <meta name="description"
+    content="Read Ermunai Organic Farm Foods' Privacy Policy to understand how we collect, use, and protect your personal data while you shop with us online." />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     /* ---------- Reset ---------- */
@@ -59,7 +63,8 @@
       margin-bottom: 10px;
     }
 
-    p, ul {
+    p,
+    ul {
       margin-bottom: 15px;
       font-size: 1rem;
       color: #333;
@@ -172,4 +177,5 @@
     © 2025 Ermunai Organic Farm Foods. All rights reserved.
   </footer>
 </body>
+
 </html>
