--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- simplest: 32x32 PNG -->
+  <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
   <title>Terms and Conditions – Ermunai Organic Farm Foods</title>
   <style>
     body {
@@ -38,7 +40,9 @@
 <body>
   <div class="container">
     <h1>Terms and Conditions</h1>
-    <p>Welcome to <strong>Ermunai Organic Farm Foods</strong>. By using our website (<a href="https://ermunaiorganicfarmfoods.com">ermunaiorganicfarmfoods.com</a>), you agree to the following terms.</p>
+    <p>Welcome to <strong>Ermunai Organic Farm Foods</strong>. By using our website (<a
+        href="https://ermunaiorganicfarmfoods.com">ermunaiorganicfarmfoods.com</a>), you agree to the following terms.
+    </p>
 
     <h2>1. Use of Website</h2>
     <p>You agree to use this website only for lawful purposes and not to disrupt its operation or harm other users.</p>
@@ -47,16 +51,19 @@
     <p>We strive to ensure product descriptions and images are accurate, but minor variations may occur.</p>
 
     <h2>3. Orders & Payments</h2>
-    <p>All orders are subject to acceptance. Payments are processed securely via Razorpay. We reserve the right to cancel orders for any reason.</p>
+    <p>All orders are subject to acceptance. Payments are processed securely via Razorpay. We reserve the right to
+      cancel orders for any reason.</p>
 
     <h2>4. Shipping</h2>
     <p>Orders are shipped as per our <a href="/shipping-policy">Shipping Policy</a>.</p>
 
     <h2>5. Cancellation & Refunds</h2>
-    <p>Cancellations and refunds are handled according to our <a href="/cancellation-and-refund-policy">Cancellation and Refund Policy</a>.</p>
+    <p>Cancellations and refunds are handled according to our <a href="/cancellation-and-refund-policy">Cancellation and
+        Refund Policy</a>.</p>
 
     <h2>6. Intellectual Property</h2>
-    <p>All text, graphics, and images on this site are property of Ermunai Organic Farm Foods and cannot be used without permission.</p>
+    <p>All text, graphics, and images on this site are property of Ermunai Organic Farm Foods and cannot be used without
+      permission.</p>
 
     <h2>7. Limitation of Liability</h2>
     <p>We are not liable for indirect damages arising from use of our services or products.</p>
