--- a/about.html
+++ b/about.html
@@ -22,6 +22,8 @@
   <meta property="og:image" content="https://ermunaiorganicfarmfoods.com/images/logo.png">
   <meta name="twitter:card" content="summary_large_image">
 
+  <!-- simplest: 32x32 PNG -->
+  <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
