--- a/cancellation-and-refund-policy.html
+++ b/cancellation-and-refund-policy.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cancellation and Refund Policy | Ermunai Organic Farm Foods</title>
-  <meta name="description" content="Read Ermunai Organic Farm Foods' Cancellation and Refund Policy for orders placed through our website.">
+  <!-- simplest: 32x32 PNG -->
+  <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
+  <meta name="description"
+    content="Read Ermunai Organic Farm Foods' Cancellation and Refund Policy for orders placed through our website.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     body {
@@ -15,34 +19,41 @@
       background-color: #f9f9f9;
       color: #333;
     }
+
     header {
       background-color: #2d572c;
       color: white;
       text-align: center;
       padding: 30px 20px;
     }
+
     header h1 {
       margin: 0;
       font-size: 26px;
     }
+
     main {
       max-width: 900px;
       margin: 40px auto;
       background: white;
       padding: 30px 40px;
       border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     }
+
     h2 {
       color: #2d572c;
       margin-top: 30px;
     }
+
     p {
       margin: 10px 0;
     }
+
     ul {
       margin: 10px 0 20px 25px;
     }
+
     footer {
       background-color: #2d572c;
       color: white;
@@ -51,15 +62,18 @@
       font-size: 14px;
       margin-top: 40px;
     }
+
     a {
       color: #2d572c;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
   </style>
 </head>
+
 <body>
   <header>
     <h1>Cancellation and Refund Policy</h1>
@@ -67,31 +81,37 @@
 
   <main>
     <p>
-      At <strong>Ermunai Organic Farm Foods</strong>, we are committed to providing you with the highest quality organic food products. 
-      However, we understand that there may be instances where you need to cancel an order or request a refund. 
+      At <strong>Ermunai Organic Farm Foods</strong>, we are committed to providing you with the highest quality organic
+      food products.
+      However, we understand that there may be instances where you need to cancel an order or request a refund.
       Please read the policy below to understand how cancellations and refunds work.
     </p>
 
     <h2>1. Order Cancellation</h2>
     <p>
-      - You can cancel your order within <strong>12 hours</strong> of placing it, provided it has not yet been processed or shipped.<br>
-      - To cancel your order, please contact our support team at 
-      <a href="mailto:ermunaiorganicfarmfoods@gmail.com">ermunaiorganicfarmfoods@gmail.com</a> 
+      - You can cancel your order within <strong>12 hours</strong> of placing it, provided it has not yet been processed
+      or shipped.<br>
+      - To cancel your order, please contact our support team at
+      <a href="mailto:ermunaiorganicfarmfoods@gmail.com">ermunaiorganicfarmfoods@gmail.com</a>
       with your order details.<br>
       - Once your order has been shipped, it cannot be cancelled.
     </p>
 
     <h2>2. Refund Policy</h2>
     <p>
-      - Refunds are applicable only for orders cancelled within the allowed time or in case of defective/damaged products.<br>
-      - For damaged or defective items, please share a photo or video proof with our team within <strong>24 hours</strong> of delivery.<br>
+      - Refunds are applicable only for orders cancelled within the allowed time or in case of defective/damaged
+      products.<br>
+      - For damaged or defective items, please share a photo or video proof with our team within <strong>24
+        hours</strong> of delivery.<br>
       - After verification, we will initiate a refund or replacement as per your preference.
     </p>
 
     <h2>3. Mode of Refund</h2>
     <p>
-      - Refunds will be processed to the same payment method used at checkout (e.g., UPI, Credit/Debit Card, Net Banking).<br>
-      - Refunds may take <strong>5–7 business days</strong> to reflect in your account, depending on your bank/payment provider.
+      - Refunds will be processed to the same payment method used at checkout (e.g., UPI, Credit/Debit Card, Net
+      Banking).<br>
+      - Refunds may take <strong>5–7 business days</strong> to reflect in your account, depending on your bank/payment
+      provider.
     </p>
 
     <h2>4. Non-Refundable Items</h2>
@@ -104,7 +124,8 @@
     <h2>5. Contact Us</h2>
     <p>
       For any questions or refund requests, please contact us at:<br>
-      <strong>Email:</strong> <a href="mailto:ermunaiorganicfarmfoods@gmail.com">ermunaiorganicfarmfoods@gmail.com</a><br>
+      <strong>Email:</strong> <a
+        href="mailto:ermunaiorganicfarmfoods@gmail.com">ermunaiorganicfarmfoods@gmail.com</a><br>
       <strong>Phone:</strong> +91 00000 00000<br>
       <strong>Address:</strong> M/s. Ermunai Organic Farm Foods,<br>
       Plot No. 8, Ramalingam St., BFI, Muraliram Srinivas Flats, Ullagaram, Chennai – 600091, Tamil Nadu, India.
@@ -115,4 +136,5 @@
     &copy; 2025 Ermunai Organic Farm Foods. All Rights Reserved.
   </footer>
 </body>
+
 </html>
