--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>My Cart – Ermunai Organic Farm Foods</title>
+  <!-- simplest: 32x32 PNG -->
+  <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
