--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,8 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://ermunaiorganicfarmfoods.com/images/logo.png">
   <meta name="twitter:card" content="summary_large_image">
+  <!-- simplest: 32x32 PNG -->
+  <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
