--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://ermunaiorganicfarmfoods.com/images/logo.png">
   <meta name="twitter:card" content="summary_large_image">
+  <!-- simplest: 32x32 PNG -->
+  <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
