--- a/purchase.html
+++ b/purchase.html
@@ -19,6 +19,8 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://ermunaiorganicfarmfoods.com/images/logo.png">
   <meta name="twitter:card" content="summary_large_image">
+  <!-- simplest: 32x32 PNG -->
+  <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
@@ -35,7 +37,7 @@
       color: #333;
     }
 
-       /* ---------- Header ---------- */
+    /* ---------- Header ---------- */
     header {
       display: flex;
       justify-content: space-between;
@@ -298,7 +300,7 @@
     .order-card:hover {
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
-    
+
     .order-info h3 {
       margin-bottom: 10px;
       font-size: 1.1rem;
@@ -431,6 +433,7 @@
     .footer-links a:hover {
       text-decoration: underline;
     }
+
     /* Responsive */
     @media (max-width: 768px) {
       header nav ul {
@@ -649,7 +652,7 @@
     async function loadOrders(userId) {
       ordersListContainer.innerHTML = "<p style='text-align:center; color:green;'>⏳ Loading purchases...</p>";
       try {
-        const ordersRef = collection(db, "orders");   
+        const ordersRef = collection(db, "orders");
         const q = query(ordersRef, where("userid", "==", userId));
         const snapshot = await getDocs(q);
         ordersListContainer.innerHTML = "";
