--- a/shipping-policy.html
+++ b/shipping-policy.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- simplest: 32x32 PNG -->
+  <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
   <title>Shipping Policy – Ermunai Organic Farm Foods</title>
   <style>
     body {
@@ -38,28 +40,33 @@
 <body>
   <div class="container">
     <h1>Shipping Policy</h1>
-    <p>At <strong>Ermunai Organic Farm Foods</strong>, we ensure that your organic products are delivered safely and on time.</p>
+    <p>At <strong>Ermunai Organic Farm Foods</strong>, we ensure that your organic products are delivered safely and on
+      time.</p>
 
     <h2>1. Service Availability</h2>
     <p>We currently ship across India through trusted courier partners.</p>
 
     <h2>2. Order Processing</h2>
-    <p>Orders are processed within 1–2 business days after confirmation. Orders placed on weekends or holidays will be processed on the next working day.</p>
+    <p>Orders are processed within 1–2 business days after confirmation. Orders placed on weekends or holidays will be
+      processed on the next working day.</p>
 
     <h2>3. Delivery Timeline</h2>
     <p>Delivery takes <strong>3–7 business days</strong> depending on your location.</p>
 
     <h2>4. Shipping Charges</h2>
-    <p>Shipping charges are displayed at checkout. Free shipping may be available for selected products or promotional offers.</p>
+    <p>Shipping charges are displayed at checkout. Free shipping may be available for selected products or promotional
+      offers.</p>
 
     <h2>5. Order Tracking</h2>
     <p>You will receive an email or SMS with tracking details once your order has been shipped.</p>
 
     <h2>6. Delivery Delays</h2>
-    <p>Delays may occur due to weather, strikes, or courier partner issues. We will keep you updated if such situations arise.</p>
+    <p>Delays may occur due to weather, strikes, or courier partner issues. We will keep you updated if such situations
+      arise.</p>
 
     <h2>7. Damaged or Missing Items</h2>
-    <p>If your package is damaged or items are missing, please email us within 48 hours at <a href="mailto:ermunaiorganicfarm@gmail.com">ermunaiorganicfarm@gmail.com</a> with photos.</p>
+    <p>If your package is damaged or items are missing, please email us within 48 hours at <a
+        href="mailto:ermunaiorganicfarm@gmail.com">ermunaiorganicfarm@gmail.com</a> with photos.</p>
 
     <h2>8. Contact</h2>
     <p>For any queries, contact us at:<br>
