--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Create Account</title>
+  <!-- simplest: 32x32 PNG -->
+  <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
   <link rel="stylesheet" href="user-create-acc.css" />
   <style>
     /* Reset */
