--- a/thankyou.html
+++ b/thankyou.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You for Your Order! | Ermunai Organic Farm Foods</title>
+    <!-- simplest: 32x32 PNG -->
+    <link rel="icon" href="./images/logo.jpg" sizes="32x32" type="image/png">
     <style>
         /* Basic CSS for a clean, centered look */
         body {
