--- a/checkout.html
+++ b/checkout.html
@@ -200,7 +200,7 @@
 
         // -------------------------------------------------------------------------------------
         // Replace this with your backend URL
-        const API_BASE_URL = "https://ermunai-user-project-production.up.railway.app";
+        const API_BASE_URL = "https://ermunai-user-project.onrender.com";
 
         // Firebase imports
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
