--- a/contact.html
+++ b/contact.html
@@ -559,7 +559,7 @@
   <header>
     <div class="logo">
       <img src="./images/logo.jpg" alt="Logo">
-      <span>Ermunai Organic Farm Foods</span>
+      <span>Ermunai Organic Farm Foods Pvt Ltd</span>
     </div>
 
     <!-- Navigation -->
@@ -611,7 +611,7 @@
         <div class="icon">📍</div>
         <div>
           <h3>Visit Us</h3>
-          <p>M/s. Ermunai Organic Farm Foods,<br>Plot No. 8, Ramalingam St.,BFI,<br>Muraliram Srinivas Flats,<br>
+          <p>M/s. Ermunai Organic Farm Foods Pvt Ltd,<br>Plot No. 8, Ramalingam St.,BFI,<br>Muraliram Srinivas Flats,<br>
             Ullagaram,<br>Chennai - 600 091</p>
         </div>
       </div>
@@ -626,7 +626,7 @@
         <div class="icon">✉️</div>
         <div>
           <h3>Email Us</h3>
-          <p>ermunaiorganicfarm@gmail.com</p>
+          <p>info@ermunaiorganicfarmfoods.com</p>
         </div>
       </div>
       <div class="whatsapp-box">
@@ -661,14 +661,14 @@
     <div class="footer-container">
       <!-- About Section -->
       <div class="footer-section about">
-        <h3>Ermunai Organic Farm Foods</h3>
-        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods,<br>
+        <h3>Ermunai Organic Farm Foods Pvt Ltd</h3>
+        <p><i class="fa fa-map-marker-alt"></i> M/s. Ermunai Organic Farm Foods Pvt Ltd,<br>
           Plot No. 8, Ramalingam St., BFI,<br>
           Muraliram Srinivas Flats,<br>
           Ullagaram, Chennai - 600 091.</p>
         <p><i class="fa fa-phone"></i> +91 9841231996</p>
         <p><i class="fab fa-whatsapp"></i> +91 9840752833</p>
-        <p><i class="fa fa-envelope"></i> ermunaiorganicfarm@gmail.com</p>
+        <p><i class="fa fa-envelope"></i> info@ermunaiorganicfarmfoods.com</p>
       </div>
 
       <!-- Company Links -->
@@ -724,7 +724,7 @@
 
     <!-- Footer Bottom -->
     <div class="footer-bottom">
-      <p>© 2025 Ermunai Organic Farm Foods. All rights reserved.</p>
+      <p>© 2025 Ermunai Organic Farm Foods Pvt Ltd. All rights reserved.</p>
       <p class="footer-links">
         <a href="privacy.html" target="_blank">Privacy Policy</a> |
         <a href="terms.html" target="_blank">Terms & Conditions</a> |
